# firmware-analyser

./: .gitignore  .gitmodules  Cargo.toml  DumpFunctionInformation_FA.py  build.rs  patch.diff
ghidra_scripts/: Dockerfile  DumpFunctionInformation_FA.py  dumpCodeBytesAndMnemonics.py  getMaskedCodeBytes.py  hashes1.db
src/: hooks.rs  lib.rs  main.rs
src/dynamic_analysis/: fuzz.rs  hooks.rs  mod.rs
src/dynamic_analysis/emu/: hooks.rs  input.rs  mod.rs
src/dynamic_analysis/emu/hooks/: arm32_hooks.rs  armv7_hooks.rs  common_hooks.rs  interrupt.rs  mod.rs
src/dynamic_analysis/emu/hooks/context/: mod.rs
src/static_analysis/: mod.rs
