[package]
name = "firmware-analyser"
version = "0.1.0"
edition = "2021"
authors = ["R Sai Ashwin <sai.ashwin2409@gmail.com"]
description = "Automated firmware analysis suite"

[[bin]]
name="firmware-analyser"
test=false
bench=false

[dependencies]
unicorn-engine = "2.1.1"
libafl = { version = "0.14.0", features = ["tui_monitor"]}
libafl_targets = {version = "0.14.0"}
libafl_bolts = {version = "0.14.0"}
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.28.0"
crossterm = "*"
serde = "*"

[build-dependencies]
pkg-config = "0.3.16"
